<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rectangle">

    <fragment
        android:id="@+id/navigation_rectangle"
        android:name="com.example.shapecalculator.ui.rectangle.RectangleFragment"
        android:label="@string/title_rectangle"
        tools:layout="@layout/fragment_rectangle" />

    <fragment
        android:id="@+id/navigation_triangle"
        android:name="com.example.shapecalculator.ui.triangle.TriangleFragment"
        android:label="@string/title_triangle"
        tools:layout="@layout/fragment_triangle" />

    <fragment
        android:id="@+id/navigation_rhombus"
        android:name="com.example.shapecalculator.ui.rhombus.RhombusFragment"
        android:label="@string/title_rhombus"
        tools:layout="@layout/fragment_rhombus" />
    <fragment
        android:id="@+id/navigation_circle"
        android:name="com.example.shapecalculator.ui.circle.CircleFragment"
        android:label="@string/tite_circle"
        tools:layout="@layout/fragment_circle" />
</navigation>